src/snapshots/pg_when__when_exact_date__tests__parse_invalid_day-2.snap
---
source: src/when_exact_date.rs
expression: err
---
0: at line 1, in MapRes:
00/01/2004
      ^

1: at line 1, in Alt:
00/01/2004
^
