src/snapshots/pg_when__when_exact_date__tests__parse_invalid_day.snap
---
source: src/when_exact_date.rs
expression: err
---
0: at line 1, in Verify:
32/12/2004
^

1: at line 1, in Alt:
32/12/2004
^
