src/snapshots/pg_when__when_exact_date__tests__parse_invalid_month-2.snap
---
source: src/when_exact_date.rs
expression: err
---
Error {
    input: "/00/2004",
    code: Space,
}
