src/snapshots/pg_when__when_exact_date__tests__parse_invalid_month.snap
---
source: src/when_exact_date.rs
expression: err
---
Error {
    input: "/13/2004",
    code: Space,
}
