src/snapshots/pg_when__when_exact_date__tests__parse_unknown.snap
---
source: src/when_exact_date.rs
expression: err
---
0: at line 1, in Digit:
unknown
^

1: at line 1, in Alt:
unknown
^
